# RoyaleDeliveryClient

./: CMakeLists.txt  README.md  global.h  main.cpp  mainwindow.cpp  mainwindow.h
headers/: globals.h
headers/net/: commands.h  conversions.h  remotepi.h  smtpconnection.h
headers/windows/: loginwindow.h  mainmailwindow.h  mainwindow.h  popups.h  signupwindow.h  windowutils.h
network/: remotepi.cpp  remotepi.h
source/: main.cpp  remotepi.cpp
source/net/: remotepi.cpp  smtpconnection.cpp
source/windows/: loginwindow.cpp  mainmailwindow.cpp  mainwindow.cpp  signupwindow.cpp
